--- a/tutorial1/checkpoint1.ipynb
+++ b/tutorial1/checkpoint1.ipynb
@@ -56,10 +56,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import matplotlib\n",
+    "import matplotlib.pyplot as plt\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -73,7 +78,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df = pd.read_csv('../data/states_edu.csv')\n",
+    "df.head()\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -94,7 +102,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df.dropna(subset=['AVG_MATH_8_SCORE'], inplace=True)\n",
+    "print(len(df))\n",
+    "df\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -107,7 +119,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Chosen Outcome Variable for Test: *ENTER YOUR CHOICE HERE*"
+    "Chosen Outcome Variable for Test: math 8 score"
    ]
   },
   {
@@ -122,7 +134,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print(len(df[\"YEAR\"].unique()))\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -136,7 +150,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print(\"Michigan:\", df[df[\"STATE\"] == \"MICHIGAN\"]['AVG_MATH_8_SCORE'].mean())\n",
+    "print(\"Ohio:\", df[df[\"STATE\"] == \"OHIO\"]['AVG_MATH_8_SCORE'].mean())\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -150,7 +167,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print(\"2019:\", df[df[\"YEAR\"] == 2019]['AVG_MATH_8_SCORE'].mean())\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -166,7 +185,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "state = df.groupby(\"STATE\")\n",
+    "state[\"AVG_MATH_8_SCORE\"].max()\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -186,13 +208,28 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df.dropna(subset=['ENROLL', 'TOTAL_EXPENDITURE', 'TOTAL_REVENUE'], inplace=True)\n",
+    "print(len(df))\n",
+    "df['EXPENDITURE_PER_STUDENT'] = df['TOTAL_EXPENDITURE'] / df['ENROLL']\n",
+    "df['REVENUE_PER_STUDENT'] = df['TOTAL_REVENUE'] / df['ENROLL']\n",
+    "df.dropna(subset=['AVG_MATH_4_SCORE', 'AVG_MATH_8_SCORE', 'AVG_READING_4_SCORE', 'AVG_READING_8_SCORE'], inplace=True)\n",
+    "df['AVG_8_TOTAL_SCORE'] = df['AVG_MATH_8_SCORE'] + df['AVG_READING_8_SCORE']\n",
+    "df['AVG_4_TOTAL_SCORE'] = df['AVG_MATH_4_SCORE'] + df['AVG_READING_4_SCORE']\n",
+    "df['AVG_ALL_TOTAL_SCORE'] = df['AVG_4_TOTAL_SCORE'] + df['AVG_8_TOTAL_SCORE']\n",
+    "print(len(df))\n",
+    "df\n"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Feature engineering justification: **<BRIEFLY DESCRIBE WHY YOU MADE THE CHANGES THAT YOU DID\\>**"
+    "Feature engineering justification: \n",
+    "\n",
+    "Drop NaN in ENROLL, TOTAL_EXPENDITURE and TOTAL_REVENUE column, calculate expenditure and revenue per student.\n",
+    "\n",
+    "Drop NaN in AVG_MATH_4_SCORE, AVG_MATH_8_SCORE, AVG_READING_4_SCORE and AVG_READING_8_SCORE column, calculate the avarage total score in grade 4 and grade 8, and the sum of score in grade 4 and grade 8."
    ]
   },
   {
@@ -211,13 +248,17 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df.plot.scatter(x='REVENUE_PER_STUDENT', y='AVG_MATH_8_SCORE', alpha=0.6)\n",
+    "plt.xlabel('Revenue per Student')\n",
+    "plt.ylabel('8th Grade Math Score')\n"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**<CAPTION FOR VIZ 1>**"
+    "CAPTION FOR VIZ 1: The relationship of 8th grade math score and revenue per student."
    ]
   },
   {
@@ -232,13 +273,17 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df.plot.scatter(x='EXPENDITURE_PER_STUDENT', y='AVG_MATH_8_SCORE', alpha=0.6)\n",
+    "plt.xlabel('Expenditure per Student')\n",
+    "plt.ylabel('8th Grade Math Score')\n"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**<CAPTION FOR VIZ 2>**"
+    "CAPTION FOR VIZ 2: The relationship of 8th grade math score and expenditure per student."
    ]
   },
   {
@@ -256,7 +301,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.model_selection import train_test_split"
+    "from sklearn.model_selection import train_test_split\n"
    ]
   },
   {
@@ -265,8 +310,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# X =\n",
-    "# y = "
+    "X = X = df[['ENROLL', 'REVENUE_PER_STUDENT', 'AVG_8_TOTAL_SCORE', 'AVG_ALL_TOTAL_SCORE']]\n",
+    "y = df.loc[X.index]['AVG_MATH_8_SCORE']\n"
    ]
   },
   {
@@ -275,8 +320,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# X_train, X_test, y_train, y_test = train_test_split(\n",
-    "#      X, y, test_size=, random_state=42)"
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=0)\n"
    ]
   },
   {
@@ -299,7 +343,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import your sklearn class here"
+    "from sklearn.linear_model import LinearRegression\n"
    ]
   },
   {
@@ -309,7 +353,7 @@
    "outputs": [],
    "source": [
     "# create your model here\n",
-    "# model = "
+    "model = LinearRegression()\n"
    ]
   },
   {
@@ -318,7 +362,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.fit(X_train, y_train)"
+    "model.fit(X_train, y_train)\n"
    ]
   },
   {
@@ -327,7 +371,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "y_pred = model.predict(X_test)"
+    "y_pred = model.predict(X_test)\n"
    ]
   },
   {
@@ -349,7 +393,20 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print(model.intercept_)\n",
+    "print(model.coef_)\n",
+    "print(model.score(X_test, y_test))\n",
+    "\n",
+    "# mean error\n",
+    "print(np.mean(model.predict(X_test) - y_test))\n",
+    "\n",
+    "# mean absolute error\n",
+    "print(np.mean(np.abs(model.predict(X_test) - y_test)))\n",
+    "\n",
+    "# root mean squared error -- penalizes large errors\n",
+    "print(np.mean((model.predict(X_test) - y_test)**2)**0.5)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -366,16 +423,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# col_name = 'COLUMN NAME OF ONE PREDICTOR'\n",
+    "col_name = 'AVG_ALL_TOTAL_SCORE'\n",
     "\n",
-    "# f = plt.figure(figsize=(12,6))\n",
-    "# plt.scatter(X_train[col_name], y_train, color = \"red\")\n",
-    "# plt.scatter(X_train[col_name], model.predict(X_train), color = \"green\")\n",
+    "f = plt.figure(figsize=(12, 6))\n",
+    "plt.scatter(X_train[col_name], y_train, color=\"red\")\n",
+    "plt.scatter(X_train[col_name], model.predict(X_train), color=\"green\")\n",
     "\n",
-    "# plt.legend(['True Training','Predicted Training'])\n",
-    "# plt.xlabel(col_name)\n",
-    "# plt.ylabel('NAME OF THE PREDICTOR')\n",
-    "# plt.title(\"Model Behavior On Training Set\")"
+    "plt.legend(['True Training', 'Predicted Training'])\n",
+    "plt.xlabel(col_name)\n",
+    "plt.ylabel('Grade 8 Math Score')\n",
+    "plt.title(\"Model Behavior On Training Set\")\n"
    ]
   },
   {
@@ -384,16 +441,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# col_name = 'COLUMN NAME OF ONE PREDICTOR\"\n",
+    "col_name = 'AVG_8_TOTAL_SCORE'\n",
     "\n",
-    "# f = plt.figure(figsize=(12,6))\n",
-    "# plt.scatter(X_test[col_name], y_test, color = \"blue\")\n",
-    "# plt.scatter(X_test[col_name], model.predict(X_test), color = \"black\")\n",
+    "f = plt.figure(figsize=(12, 6))\n",
+    "plt.scatter(X_test[col_name], y_test, color=\"blue\")\n",
+    "plt.scatter(X_test[col_name], model.predict(X_test), color=\"black\")\n",
     "\n",
-    "# plt.legend(['True testing','Predicted testing'])\n",
-    "# plt.xlabel(col_name)\n",
-    "# plt.ylabel('NAME OF THE PREDICTOR')\n",
-    "# plt.title(\"Model Behavior on Testing Set\")"
+    "plt.legend(['True testing', 'Predicted testing'])\n",
+    "plt.xlabel(col_name)\n",
+    "plt.ylabel('Grade 8 Math Score')\n",
+    "plt.title(\"Model Behavior on Testing Set\")\n"
    ]
   },
   {
@@ -407,7 +464,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**<WRITE A PARAGRAPH SUMMARIZING YOUR WORK, FINDINGS, AND THE PERFORMANCE OF YOUR MODEL\\>**"
+    "I have chosen the enroll number, revenue per student, grade 8 total score and the sum of score in grade 4 and grade 8 to predict grade 8 math grade. The score of this model, mean error and the graphs above have shown that this model can predict the grade 8 math score well. However, later I thought of some problems in this approach. Since we need to predict grade 8 math score, we didn't know it before, so we also didn't know the grade 8 total score and the sum of score in grade 4 and grade 8. As a result, we couldn't use these two data to predict."
    ]
   }
  ],
@@ -427,7 +484,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.9.12"
   },
   "vscode": {
    "interpreter": {
