--- a/tutorial0/checkpoint0.ipynb
+++ b/tutorial0/checkpoint0.ipynb
@@ -40,7 +40,9 @@
    "outputs": [],
    "source": [
     "# get a list containing the last 3 elements of a\n",
-    "# Yes, you can just type out [4, 5, 6] but we really want to see you demonstrate you know how to use list slicing in Python"
+    "# Yes, you can just type out [4, 5, 6] but we really want to see you demonstrate you know how to use list slicing in Python\n",
+    "\n",
+    "print(a[-3:])\n"
    ]
   },
   {
@@ -50,7 +52,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# create a list of numbers from 1 to 20"
+    "# create a list of numbers from 1 to 20\n",
+    "b = [i for i in range(1, 21)]\n",
+    "print(b)\n"
    ]
   },
   {
@@ -61,7 +65,9 @@
    "outputs": [],
    "source": [
     "# now get a list with only the even numbers between 1 and 100\n",
-    "# you may or may not make use of the list you made in the last cell"
+    "# you may or may not make use of the list you made in the last cell\n",
+    "c = [i for i in range(2, 101, 2)]\n",
+    "print(c)\n"
    ]
   },
   {
@@ -72,7 +78,10 @@
    "outputs": [],
    "source": [
     "# write a function that takes two numbers as arguments\n",
-    "# and returns the first number divided by the second"
+    "# and returns the first number divided by the second\n",
+    "\n",
+    "def divide(a, b):\n",
+    "    print(a / b)\n"
    ]
   },
   {
@@ -83,7 +92,10 @@
    "outputs": [],
    "source": [
     "# write a function that takes a string as input\n",
-    "# and return that string in all caps"
+    "# and return that string in all caps\n",
+    "\n",
+    "def to_upper(s: str):\n",
+    "    return s.upper()\n"
    ]
   },
   {
@@ -94,12 +106,24 @@
    "outputs": [],
    "source": [
     "# fizzbuzz\n",
-    "# you will need to use both iteration and control flow \n",
+    "# you will need to use both iteration and control flow\n",
     "# go through all numbers from 1 to 30 in order\n",
     "# if the number is a multiple of 3, print fizz\n",
     "# if the number is a multiple of 5, print buzz\n",
     "# if the number is a multiple of 3 and 5, print fizzbuzz and NOTHING ELSE\n",
-    "# if the number is neither a multiple of 3 nor a multiple of 5, print the number"
+    "# if the number is neither a multiple of 3 nor a multiple of 5, print the number\n",
+    "\n",
+    "for i in range(1, 31):\n",
+    "    if (i % 15 == 0):\n",
+    "        print(\"fizzbuzz\")\n",
+    "        continue\n",
+    "    if (i % 3 == 0):\n",
+    "        print(\"fizz\")\n",
+    "        continue\n",
+    "    if (i % 5 == 0):\n",
+    "        print(\"buzz\")\n",
+    "        continue\n",
+    "    print(i)\n"
    ]
   },
   {
@@ -110,10 +134,18 @@
    "outputs": [],
    "source": [
     "# create a dictionary that reflects the following menu pricing (taken from Ahmo's)\n",
-    "# Gyro: $9 \n",
+    "# Gyro: $9\n",
     "# Burger: $9\n",
     "# Greek Salad: $8\n",
-    "# Philly Steak: $10"
+    "# Philly Steak: $10\n",
+    "\n",
+    "d = {\n",
+    "    \"Gyro\": 9,\n",
+    "    \"Burger\": 9,\n",
+    "    \"Greek Salad\": 8,\n",
+    "    \"Philly Steak\": 10\n",
+    "}\n",
+    "print(d)\n"
    ]
   },
   {
@@ -127,7 +159,11 @@
    "outputs": [],
    "source": [
     "# load in the \"starbucks.csv\" dataset\n",
-    "# refer to how we read the cereal.csv dataset in the tutorial\n"
+    "# refer to how we read the cereal.csv dataset in the tutorial\n",
+    "\n",
+    "import pandas as pd\n",
+    "df = pd.read_csv(\"../data/starbucks.csv\")\n",
+    "df\n"
    ]
   },
   {
@@ -137,7 +173,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# output the calories, sugars, and protein columns only of every 40th row. "
+    "# output the calories, sugars, and protein columns only of every 40th row.\n",
+    "df.iloc[::40, [3, 11, 12]]\n"
    ]
   },
   {
@@ -147,7 +184,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# select all rows with more than and including 400 calories"
+    "# select all rows with more than and including 400 calories\n",
+    "df[df[\"calories\"] > 400]\n"
    ]
   },
   {
@@ -157,7 +195,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# select all rows whose vitamin c content is higher than the iron content"
+    "# select all rows whose vitamin c content is higher than the iron content\n",
+    "df[df[\"vitamin c\"] > df[\"iron\"]]"
    ]
   },
   {
@@ -167,7 +206,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# create a new column containing the caffeine per calories of each drink"
+    "# create a new column containing the caffeine per calories of each drink\n",
+    "df[\"caffeine_per_calories\"] = df[\"caffeine\"] / df[\"calories\"]\n",
+    "df\n"
    ]
   },
   {
@@ -180,7 +221,8 @@
    },
    "outputs": [],
    "source": [
-    "# what is the average calorie across all items?\n"
+    "# what is the average calorie across all items?\n",
+    "df[\"calories\"].mean()"
    ]
   },
   {
@@ -193,7 +235,8 @@
    },
    "outputs": [],
    "source": [
-    "# how many different categories of beverages are there?\n"
+    "# how many different categories of beverages are there?\n",
+    "print(len(df[\"beverage\"].unique()))\n"
    ]
   },
   {
@@ -206,7 +249,9 @@
    },
    "outputs": [],
    "source": [
-    "# what is the average # calories for each beverage category?\n"
+    "# what is the average # calories for each beverage category?\n",
+    "beverage = df.groupby(\"beverage\")\n",
+    "beverage[\"calories\"].mean()"
    ]
   }
  ],
@@ -226,7 +271,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.9.12"
   },
   "vscode": {
    "interpreter": {
